[tool.poetry]
name = "manim-test"
version = "0.1.0"
description = ""
authors = ["Palani Johnson <palani.johnson@fbgpg.com>"]
readme = "README.md"
packages = [{include = "manim_test"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
manim = "^0.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

